--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,20 +1,21 @@
-# Prevent direct access to the "public" folder - redirect to root
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /public/
-RewriteRule ^public/(.*) /$1 [R=302,L]
+<IfModule mod_rewrite.c>
+    <IfModule mod_negotiation.c>
+        Options -MultiViews -Indexes
+    </IfModule>
 
-# Redirect Trailing Slashes If Not A Folder...
-# - but look for the file in the "public" folder
-#   (ensure we are not already in the "public" folder)
-RewriteCond %{REQUEST_URI} !^/public/
-RewriteCond %{DOCUMENT_ROOT}/public/$1 !-d
-RewriteRule ^(.*)/$ /$1 [R=302,L]
+    RewriteEngine On
 
-# Rewrite "everything" to the "public" subdirectory if not already
-# This ignores existing files/dirs in the document root
-RewriteCond %{REQUEST_URI} ^/(.*)
-RewriteRule !^public/ public/%1
+    # Handle Authorization Header
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-# Handle Front Controller... (as before)
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.php [L]
+    # Redirect Trailing Slashes If Not A Folder...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteRule ^ %1 [L,R=301]
+
+    # Send Requests To Front Controller...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ index.php [L]
+</IfModule>
